--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 copulas==0.12.0
 joblib==1.4.2
 matplotlib==3.9.2
-numpy==2.1.3
+numpy<2.0.0,>=1.26.0
 pandas==2.2.3
 python-dotenv==1.0.1
 scikit_learn==1.5.2
 scipy==1.14.1
 seaborn==0.13.2
+streamlit==1.32.0
