--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 copulas==0.12.0
+ctgan==0.7.4
 joblib==1.4.2
 matplotlib==3.9.2
 numpy<2.0.0,>=1.26.0
@@ -6,5 +7,7 @@ pandas==2.2.3
 python-dotenv==1.0.1
 scikit_learn==1.5.2
 scipy==1.14.1
+sdv==1.2.1
 seaborn==0.13.2
 streamlit==1.32.0
+torch==2.2.0
