--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ copulas==0.12.0
 ctgan==0.7.4
 joblib==1.4.2
 matplotlib==3.9.2
-numpy<2.0.0,>=1.26.0
+numpy==1.26.0
 pandas==2.2.3
 python-dotenv==1.0.1
 scikit_learn==1.5.2
